<resources>
    <string name="app_name">PDIC</string>
    <string name="local_string">en_US</string>
    <string name="action_incsrch">Dictionary Search</string>
    <string name="action_pswin">Touch Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pswin">Touch Search</string>
    <string name="action_dictionary">Dictionary Settings</string>
    <string name="title_activity_dic_setting">Dictionary Settings</string>

    <string name="title_activity_settings">Settings</string>
    <string name="prefDebug">Debug Mode</string>
    <string name="title_activity_dic_download_list">Dictionary List for download</string>
    <string name="failed_to_make_dir">Failed to make directory:</string>

    <string name="dic_list_url">https://pdic.sakura.ne.jp/cgi-bin/dicsrvtest/list.cgi</string>
    <string name="title_activity_dropbox_download">Dropbox Download</string>

    <string name="font_bold_text"><b>T</b></string>
    <string name="font_underline_text"><u>T</u></string>
    <string name="font_italic_text"><i>T</i></string>
    <string name="font_strikeout_text"><strike>T</strike></string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_psbookmark">Bookmark List</string>
    <string name="action_loadfile_example">Open file - example.txt</string>
    <string name="action_loadfile">Open file</string>
    <string name="action_loadfile_history">Open file from History</string>
    <string name="action_loadfile_dropbox">Open file from Dropbox</string>
    <string name="action_reload_file">Reload File</string>
    <string name="action_view_bookmarklist">Bookmark List</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_close">Close</string>
    <string name="action_google_translate">Google Trans</string>
    <string name="action_tts">TTS</string>
    <string name="action_edit_comment">Edit Comment</string>
    <string name="title_input_comment">Input Comment</string>
    <string name="title_activity_loadfile_history">File History</string>
    <string name="title_activity_setting">Settings</string>
    <string name="msg_dictionary_added">Dictionary added.</string>
    <string name="msg_dictionary_already_registered">Dictionary already registered.</string>
    <string name="msg_authenticated">Authenticated</string>
    <string name="msg_open_dictionary_query">Previous PDIC is not terminated normally. Do you open the dictionary?</string>
    <string name="title_prog_dirlsit">Get the file list</string>
    <string name="msg_prog_dirlist">Getting file list...</string>
    <string name="title_prog_file_loading">Load File</string>
    <string name="title_prog_file_saving">Save File</string>
    <string name="msg_prog_file_loading">File loading...</string>
    <string name="msg_prog_file_saving">File saving...</string>
    <string name="toast_opening_message">Opened the file \&quot;%3$s\&quot; as %1$s/%2$s.</string>
    <string name="toast_open_via_content_provider">Opened via Content Provider. So you can\'t overwrite this file.</string>
    <string name="toast_open_failed">Can\'t open the file.</string>
    <string name="spinner_message">Wait a while...</string>
    <string name="label_auto_detect">Auto Detect</string>
    <string name="label_keep_original">Keep Original</string>
    <string name="label_shortcut_view">Open by default app</string>
    <string name="label_shortcut_jota">Open by Jota Text Editor</string>
    <string name="toast_saved_message">Saved the file \\\"%1$s\\\"</string>
    <string name="toast_save_failed">Couldn\'t save the file.</string>
    <string name="toast_cannot_get_clipboard">Couldn\'t get the clipboard text.</string>
    <string name="msg_bookmark_file_downloaded">Bookmark file downloaded : </string>
    <string name="msg_dictionary_removed">Dictionary be removed.</string>
    <string name="msg_file_load_failed">File load failed.</string>
    <string name="msg_file_save_failed">File save failed.</string>
    <string name="msg_file_loaded">File loaded.</string>
    <string name="msg_cannot_get_or_connect">Cannot get or connect.</string>
    <string name="label_download">Download</string>
    <string name="label_add_file">Add File</string>
    <string name="label_add_file_dropbox">Add File from Dropbox</string>
    <string name="bookmark_sharing">Bookmark Sharing</string>
    <string name="bookmark_sharing_summary">Sharing Bookmark with Dropbox</string>
    <string name="title_activity_file_history">FileHistoryActivity</string>
    <string name="msg_no_history">No history</string>
    <string name="action_savefile">Save File</string>
    <string name="title_activity_file_save">FileSaveActivity</string>
    <string name="label_selet_folder">Select Folder</string>
    <string name="label_select">Select</string>
    <string name="labe_save">Save</string>
    <string name="msg_mkdir_failed">Failed to mkdirs : </string>
    <string name="msg_nodictionary">Dictionary is not configured to use PDIC. Please add one or more dictionaries in Dictionary Setting.</string>
    <string name="msg_input_word">Input Search Words</string>
    <string name="title_downloading_file">Downloading file..</string>
    <string name="msg_clipboard_loaded">Clipboard loaded.</string>
    <string name="defcharset_summary_on">Uses ShiftJIS as file encoding</string>
    <string name="defcharset_summary_off">Uses UTF-8 as file encoding</string>
    <string name="defcharset_title">Default Charset</string>
    <string name="defcharset_summary">Default character encoding for file load</string>
    <string name="showpronexp_title">Display Items (Phonetic Symbol/Example)</string>
    <string name="showpronexp_summary">Display Items (Phonetic Symbol/Example)</string>
    <string name="showpronexp_on">Yes</string>
    <string name="showpronexp_off">No</string>
    <string name="label_size">Size</string>
    <string name="label_count">Count</string>
    <string name="msg_need_save_for_psbm">Need to save to the file for using bookmark</string>
    <string name="label_add_file_googledrive">Add File from Google Drive</string>
    <string name="title_activity_googledrive_download">Google Drive Download</string>
    <string name="title_activity_dropbox_file_selection">Select File from Dropbox</string>
    <string name="title_activity_file_selection">Select File</string>
    <string name="action_goto">Move Cursor</string>
    <string name="action_goto_play_line">Go to playing line</string>
    <string name="percent_btn">%</string>
    <string name="line_num_btn">Line Num</string>
    <string name="move_cursor">Move Cursor</string>
    <string name="msg_no_hit_word">No Hit Word.</string>
    <string name="label_auto">Auto</string>
    <string name="label_charcode">Encoding</string>
    <string name="label_sort">Sort</string>
    <string name="label_name">Name</string>
    <string name="label_date">Date</string>
    <string name="label_read">Read</string>
    <string name="label_path">PATH</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="title_enter_path">Enter path due to no file found</string>
    <string name="audio_file_folder">Audio File Folder</string>
    <string name="msg_dic_not_opened">Dictionary cannot be opened.</string>
    <string name="title_input_path">Direct Input Path</string>
    <string name="msg_file_not_found">Not found files</string>
    <string name="toast_download_failed">Couldn\'t download file.</string>
    <string name="bluetooth_auto_play">Audio auto play when bluetooth conencted</string>
    <string name="google_trans_api_key">Google Cloud Translation API Key</string>
    <string name="msg_require_google_trans_api_key">You need to enter Google Could Translation API Key in Setting menu.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_inc_srch">Incremental Search</string>
    <string name="title_touch_srch">Touch Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_dictionary_setting">Dictionary Setting</string>
    <string name="title_check_version">Check Version</string>
    <string name="title_version_info">Version Info</string>
    <string name="msg_current_version">Current version: %1$s</string>
    <string name="msg_latest_version">You are running the latest version</string>
    <string name="title_update_available">Update Available</string>
    <string name="title_update_available_saf">Full-featured version information</string>
    <string name="msg_update_prompt">Current version: %1$s\nLatest version: %2$s\nA newer version is available. Do you want to download it?</string>
    <string name="msg_upgrade_prompt">The version of PDIC installed from Google Play has feature limitations:\n- Dictionary or audio files (mp3) that require random access may incur unnecessary copying\n- Audio playback in touch search may not work\n\nWould you like to go to the download site for the full-featured version?</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="title_open_dictionary">Open Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_clip_srch">Clipboard Search</string>
    <string name="msg_need_clipboard_data">You need clipboard data from other application to do clip search.</string>
    <string name="msg_debug_on">Enabled debug mode.</string>
    <string name="msg_debug_off">Disabled debug mode.</string>
    <string name="action_wpm">Start/Stop WPM</string>
    <string name="action_sleep_timer">Sleep/Wakeup Timer</string>
    <string name="audio_channel_name">Audio Playback</string>
    <string name="action_toggle_follow_play_line">Follow playing line</string>
    <string name="msg_failed_to_open_temporary_file">"Failed to open temporary file: "</string>
    <string name="msg_not_enough_space">Not enough storage space for file copy.</string>
    <!-- dialog for directory access permission -->
    <string name="dialog_request_directory_access_title">Please allow access to the folder</string>
    <string name="dialog_request_directory_access_message">To automatically detect audio files in the same folder, please grant access to the folder just once.</string>
    <string name="button_allow">Allow</string>
    <string name="msg_select_dic_or_txt_file">Please select a file with the extension .dic .txt or .csv.</string>
</resources>
