<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="">
        <CheckBoxPreference
            android:summaryOn="@string/showpronexp_on"
            android:summaryOff="@string/showpronexp_off"
            android:title="@string/showpronexp_title"
            android:summary="@string/showpronexp_summary"
            android:defaultValue="false"
            android:key="ShowPronExp"></CheckBoxPreference>
        </PreferenceCategory>
    <PreferenceCategory android:title="">
        <CheckBoxPreference
            android:summaryOn=""
            android:summaryOff="@string/bookmark_sharing_summary"
            android:title="@string/bookmark_sharing"
            android:summary="@string/bookmark_sharing_summary"
            android:defaultValue="false"
            android:key="PSBookmarkSharing"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="">
        <CheckBoxPreference
            android:summaryOn="@string/defcharset_summary_on"
            android:summaryOff="@string/defcharset_summary_off"
            android:title="@string/defcharset_title"
            android:summary="@string/defcharset_summary"
            android:defaultValue="false"
            android:key="DefCharset"></CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>