<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.reliefoffice.pdic.PSWinActivity">

    <item android:id="@+id/action_loadfile"
        android:title="@string/action_loadfile"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_loadfile_history"
        android:title="@string/action_loadfile_history"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_loadfile_dropbox"
        android:title="@string/action_loadfile_dropbox"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_reload_file"
        android:title="@string/action_reload_file"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_savefile"
        android:title="@string/action_savefile"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_goto"
        android:title="@string/action_goto"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_viewpsb"
        android:title="@string/action_view_bookmarklist"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_wpm"
        android:title="@string/action_wpm"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
