<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_inc_srch" />
        <item
            android:id="@+id/nav_touch_search"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_touch_srch" />
        <item
            android:id="@+id/nav_clip_search"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_clip_srch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_dic_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_dictionary_setting" />
    </group>
</menu>