<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reliefoffice.pdic.FileSelectionActivity">

    <TextView
        android:text="@string/label_path"
        android:id="@+id/text_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView android:id="@+id/fileList"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/label_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:text="@string/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_name" />
        <Button
            android:text="@string/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_date" />
        <Button
            android:text="@string/label_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_read" />
        <Button
            android:text="@string/label_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/label_charcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:id="@+id/rg_encoding"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/label_auto"
                android:id="@+id/btn_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="ShiftJIS"
                android:id="@+id/btn_shiftjis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="UTF-8"
                android:id="@+id/btn_utf8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="UTF-16"
                android:id="@+id/btn_utf16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>


</LinearLayout>
