<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/tv_normal_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="T"/>
        <TextView android:id="@+id/tv_bold_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/font_bold_text"/>
        <TextView android:id="@+id/tv_underline_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/font_underline_text"/>
        <TextView android:id="@+id/tv_italic_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/font_italic_text"/>
        <TextView android:id="@+id/tv_strikeout_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:text="@string/font_strikeout_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:id="@+id/tv_hilite_off_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:text=" T " />
            <TextView android:id="@+id/tv_hilite1_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:background="#ff8080"
                android:text=" T " />
            <TextView android:id="@+id/tv_hilite2_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:background="#00ff00"
                android:text=" T " />
            <TextView android:id="@+id/tv_hilite3_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:background="#00ffff"
                android:text=" T " />
            <TextView android:id="@+id/tv_hilite4_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:fontFamily="cursive"
                android:background="#ffff00"
                android:text=" T " />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_edit_comment" />
    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_close" />
    </LinearLayout>
</LinearLayout>